--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pino-pretty": "^11.2.2"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
