/auth/send-reset-email

--- a/src/.env.example
+++ b/src/.env.example
@@ -6,6 +6,15 @@ MONGODB_DB=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
+JWT_SECRET=
+APP_DOMAIN=
+
+
 
 
 
