--- a/swagger/paths/contacts/{id}/delete.yaml
+++ b/swagger/paths/contacts/{id}/delete.yaml
@@ -1,9 +1,8 @@
-# swagger/paths/studens/{id}/get.yaml
 tags:
   - Contacts
-summary: Get contact by id
-operationId: getContact
-description: 'Get contact by id'
+summary: Delete a contact
+operationId: deleteContact
+description: 'Delete a specific contact by id'
 security:
   - bearerAuth: []
 parameters:
@@ -15,7 +14,7 @@ parameters:
       example: '65ca67e7ae7f10c88b598384'
 responses:
   '200':
-    description: 'Get contact by id'
+    description: 'Successfully deleted contact'
     content:
       application/json:
         schema:
@@ -23,16 +22,25 @@ responses:
           required:
             - status
             - message
-            - data
           properties:
             status:
               type: integer
               example: 200
             message:
               type: string
-              example: Successfully found contact with id 65ca67e7ae7f10c88b598384!
-            data:
-              type: object
-              $ref: ../../../components/schemas/contact.yaml
+              example: Successfully deleted contact with id 65ca67e7ae7f10c88b598384
   '401':
     $ref: ../../../components/responses/401.yaml
+  '404':
+    description: Contact not found
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            status:
+              type: integer
+              example: 404
+            message:
+              type: string
+              example: Contact not found
